--- a/Development/CalendarApplication/src/main/webapp/WEB-INF/web.xml
+++ b/Development/CalendarApplication/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,14 @@
 
 	<display-name>Archetype Created Web Application</display-name>
 	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:frameworkContext.xml,classpath:applicationContext.xml</param-value>
+	</context-param>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>springDispatcher</servlet-name>
