--- a/Development/CalendarApplication/src/main/webapp/WEB-INF/web.xml
+++ b/Development/CalendarApplication/src/main/webapp/WEB-INF/web.xml
@@ -31,5 +31,25 @@
 		<servlet-name>springDispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!-- <servlet-mapping>
+    	<servlet-name>default</servlet-name>
+    	<url-pattern>*.css</url-pattern>
+  	</servlet-mapping>
+  	
+  	<servlet-mapping>
+    	<servlet-name>default</servlet-name>
+    	<url-pattern>*.js</url-pattern>
+  	</servlet-mapping> -->
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/jsp/error.jsp</location>
+	</error-page>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/jsp/error.jsp</location>
+	</error-page>
 
 </web-app>
