--- a/Development/CalendarApplication/pom.xml
+++ b/Development/CalendarApplication/pom.xml
@@ -172,6 +172,18 @@
 			<version>1.4</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4</version>
+		</dependency>
+		
+		<!-- For random string generator -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
