[#136650513] [#133031089] Added authentication and authorization using spring-security. Added Login form. Basic session management also done. Password comparison with Bcrypt algo.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,10 @@
     	<url-pattern>*.js</url-pattern>
   	</servlet-mapping> -->
 	
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
+	
 	<error-page>
 		<error-code>500</error-code>
 		<location>/WEB-INF/views/jsp/error.jsp</location>
