--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		<param-value>classpath:frameworkContext.xml,classpath:applicationContext.xml</param-value>
 	</context-param>
 	
-	<filter>
+	<!-- <filter>
     	<filter-name>springSecurityFilterChain</filter-name>
     	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -21,7 +21,51 @@
 	<filter-mapping>
 	    <filter-name>springSecurityFilterChain</filter-name>
 	    <url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
+	
+	<!-- Shiro filter-->
+    <filter>
+        <filter-name>ShiroFilter</filter-name>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>ShiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
+    <!-- <filter>
+            <filter-name>shiroFilter</filter-name>
+            <filter-class>org.apache.shiro.web.servlet.IniShiroFilter</filter-class>
+            <init-param>
+                <param-name>config</param-name>
+                <param-value>
+                    [main]
+                    securityManager.realm = authc
+                    authc.loginUrl = /loginpage.jsp 
+
+                    [user]
+                    Admin = password,ROLE_ADMIN
+
+                    [roles]
+                    ROLE_ADMIN = *
+
+                    [url]
+                    /account/** =authc
+                    /welcome = roles[ROLE_ADMIN]
+                </param-value>
+            </init-param>
+        </filter>
+
+        <filter-mapping>
+            <filter-name>shiroFilter</filter-name>
+            <url-pattern>/</url-pattern>
+        </filter-mapping> -->
 	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
